[package]
name = "communities-server"
version = "0.1.0"
authors = ["Sudarsan <sudar.theone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.5.4"
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
env_logger = "0.7"
rand = "0.7"
